# wireguard-gui

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: dependency-review.yml  rust-ci.yml  scorecards.yml
src/: cli.rs  config.rs  fields.rs  generation_settings.rs  generator.rs  header_bar.rs  lib.rs  log.rs  main.rs  overview.rs  peer.rs  toast.rs  tunnel.rs  tunnels.rs  utils.rs
src/components/: log.rs  mod.rs
