[package]
name = "wireguard-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ipnetwork = "0.21.1"
config-rs = "0.1.3"
karen = "0.1.2"
nix = { version = "0.30.1", features = ["fs", "user"] }
relm4 = "0.9.1"
relm4-components = "0.9.1"
tempfile = "3.19.1"
tokio = { version = "1.45.0", features = ["full"] }
wait-timeout = "0.2.1"
getifaddrs = "0.1.5"
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.6"
lazy_static = "1.5.0"
syslog = "7.0.0"