# SPDX-FileCopyrightText: 2022-2026 TII (SSRC) and the Ghaf contributors
# SPDX-License-Identifier: Apache-2.0
[package]
name = "wireguard-gui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ipnetwork = "0.21.1"
config-rs = "0.1.3"
karen = "0.1.2"
nix = { version = "0.30.1", features = ["fs", "user"] }
relm4 = "0.9.1"
relm4-components = "0.9.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
wait-timeout = "0.2.1"
getifaddrs = "0.6.0"
clap = { version = "4.5.54", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
lazy_static = "1.5.0"
syslog = "7.0.0"
pnet_datalink = "0.35.0"
anyhow = "1.0.100"